Running shell with ProcessBuilder and cleaner code